# diplom_project_part_web

./: .gitignore  README.md  config.py  conftest.py  pyproject.toml
allure-results/: 06f86a1b-67d5-4887-81dd-cee1a5020622-container.json  0cb4386e-3a2e-47dd-b716-48508b957d29-attachment.html  1ac98720-2daf-431d-adc4-e1d06dc210bb-container.json  1c6649d8-35b6-4981-91d0-49702c2e154f-container.json  20282b9a-8cc4-4641-ad13-aad802a45765-attachment.html  293b744c-a4bd-43d8-b189-db4ff8b53ec9-container.json  29d7a7c8-dea4-4015-b76f-c1b14d00074e-container.json  2f99eea8-a931-44db-ae15-1574494dd3c3-attachment.txt  3d9157de-f7bc-406e-996b-aa85297ad308-container.json  3e2ee7dc-6349-44ef-bcde-3d1ecbe5b51c-result.json  55f01fe6-1a53-4199-b753-6856117d4bff-result.json  564c63a2-9f06-4720-a997-beabb27112d0-result.json  5c214341-8d04-45ca-bbea-8ae37c20ebc2-result.json  63fa07d0-8ee8-4325-81e0-af8150418c00-container.json  652c49be-c5eb-4f26-83b3-5627c5eec163-container.json  670ce92b-4eb3-43b9-995a-6b0dbe5f2813-container.json  6742c950-8720-48a0-918c-3cf1a504e3db-attachment.html  6b1abb93-cd7c-4e46-9d0c-026ad7326917-result.json  6f9b81f4-5743-4167-95f7-e63478a77a1b-result.json  72428c08-960d-4ed5-84c3-011f49720aab-container.json  79cefe97-f0c2-4960-9049-9c4ba497e258-container.json  7c68760a-fdbe-49b1-a43a-2c8ab4775f9d-attachment.txt  82811f8c-8c7b-4770-b6ee-d6d0b5370719-attachment.html  86d6acbe-fc78-4ad0-b702-caedd2afe654-container.json  8ea7e83d-0d53-482a-8ddb-5e214e604293-container.json  96701967-2f6a-4819-92e7-f3be815a8606-container.json  e97f663f-c9b7-45c0-bb9c-c8ad669f6334-result.json  (+12 more)
(+45 files in other folders)
